--- a/style.css
+++ b/style.css
@@ -9,39 +9,17 @@ main {
   height: 100vh;
   color: white;
   text-align: center;
+  padding: 25px;
 }
 
 .calculadora {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   border-radius: 15px;
   padding: 15px;
   background-color: rgba(0, 0, 0, 0.3);
-}
-
-button {
-  width: 50px;
-  height: 50px;
-  cursor: pointer;
-  font-size: 25px;
-  border: none;
-  background-color: rgba(31, 31, 31);
-  color: white;
-  margin: 3px;
-}
-
-button:hover {
-  background-color: black;
-}
-
-.button-equal {
-  height: 106px;
-}
-
-.button-zero {
-  width: 106px;
 }
 
 #resultado {
@@ -53,4 +31,30 @@ button:hover {
   color: black;
   font-size: 25px;
   text-align: right;
+  border-radius: 5px;
+  margin-left: 15px;
+}
+
+button {
+  width: 50px;
+  height: 50px;
+  font-size: 25px;
+  border: none;
+  background-color: rgba(31, 31, 31);
+  color: white;
+  margin: 3px;
+  border-radius: 35px;
+}
+
+button:hover {
+  background-color: rgba(0, 0, 0, 0.131);
+  border: 1px solid red;
+}
+
+.button-equal {
+  height: 106px;
+}
+
+.button-zero {
+  width: 106px;
 }
